Docs, links, logs

--- a/public/main.css
+++ b/public/main.css
@@ -48,6 +48,10 @@ ul li::before {
   background-color: currentColor;
 }
 
+li {
+  margin-bottom: 1vh;
+}
+
 .large_li li {
   margin-bottom: 2vh;
   font-size: 3vh;
